<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dimen_5"
    tools:context=".SongDetailActivity">

    <ImageView
        android:id="@+id/music_thumbnail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.4" />

    <TextView
        android:id="@+id/artist_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="4dp"
        android:layout_marginTop="8dp"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18"
        android:padding="@dimen/dimen_5"
        android:text="@string/artist_name"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/music_thumbnail" />

    <TextView
        android:id="@+id/artist_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:hint="@string/artist_name"
        android:padding="@dimen/dimen_5"
        android:textSize="@dimen/dimen_18"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/artist_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/artist_label"
        app:layout_constraintStart_toStartOf="@+id/guideline1"/>
    <TextView
        android:id="@+id/collection_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:text="@string/collection_name"
        android:padding="@dimen/dimen_5"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18"
        android:gravity="center_vertical"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        app:layout_constraintTop_toBottomOf="@+id/artist_label"
        app:layout_constraintBottom_toBottomOf="@+id/artist_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/collection_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:hint="@string/collection_name"
        android:padding="@dimen/dimen_5"
        android:textSize="@dimen/dimen_18"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/collection_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/collection_label"
        app:layout_constraintStart_toStartOf="@+id/guideline1"/>
    <TextView
        android:id="@+id/track_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:text="@string/track_name"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:padding="@dimen/dimen_5"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18"
        android:gravity="center_vertical"
        app:layout_constraintTop_toBottomOf="@+id/collection_label"
        app:layout_constraintBottom_toBottomOf="@+id/collection_label"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/track_name"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:hint="@string/track_name"
        android:padding="@dimen/dimen_5"
        android:textSize="@dimen/dimen_18"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/track_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/track_label"
        app:layout_constraintStart_toStartOf="@+id/guideline1"/>

    <TextView
        android:id="@+id/track_price_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:text="@string/track_price_name"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:padding="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18"
        app:layout_constraintTop_toBottomOf="@+id/track_name"
        app:layout_constraintBottom_toBottomOf="@+id/track_name"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/track_price"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:hint="@string/track_price_name"
        android:padding="@dimen/dimen_5"
        android:textSize="@dimen/dimen_18"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/track_price_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/track_price_label"
        app:layout_constraintStart_toStartOf="@+id/guideline1"/>
    <TextView
        android:id="@+id/release_date_label"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:text="@string/release_date"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:padding="@dimen/dimen_5"
        android:gravity="center_vertical"
        android:textStyle="bold"
        android:textSize="@dimen/dimen_18"
        app:layout_constraintTop_toBottomOf="@+id/track_price"
        app:layout_constraintBottom_toBottomOf="@+id/track_price"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/release_date"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/dimen_40"
        android:layout_marginStart="@dimen/dimen_5"
        android:layout_marginLeft="@dimen/dimen_5"
        android:hint="@string/release_date"
        android:padding="@dimen/dimen_5"
        android:textSize="@dimen/dimen_18"
        android:gravity="center_vertical"
        app:layout_constraintStart_toEndOf="@+id/release_date_label"
        app:layout_constraintBaseline_toBaselineOf="@+id/release_date_label"
        app:layout_constraintStart_toStartOf="@+id/guideline1"/>
</androidx.constraintlayout.widget.ConstraintLayout>